@@ -1,14 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST ts-datetime-delta-1.0.2.gem 9728 RMD160 6e4c2061fc755242b6cf222ef935ced0f9dffa9b SHA1 6c4439b9156dbf2afc21fc575482b251620407d0 SHA256 478b9d150c64c34ecac1ce297daed47e65947efe33bccc877b31cad771f03319
+EBUILD ts-datetime-delta-1.0.2-r1.ebuild 754 RMD160 19bee38f7963d3129bbe72a775e274395f1e5fc4 SHA1 68e884c0b75592b4e497a85b0eefb6cf4af49a08 SHA256 439d2aec0f9da5a406c731577063331135770b82f99a59b5a09a30c51de9919c
 EBUILD ts-datetime-delta-1.0.2.ebuild 538 RMD160 56ea74b10d15eef8b671d7ccbf075086ca325b67 SHA1 034bf28163bcac82c73ad5f921ca908f3b3df7c4 SHA256 21e4ba46f962a84c95a34468e4c78cb7fe556848bc942badef6837397bb7b150
-MISC ChangeLog 332 RMD160 1901f7cb1e3e7a28a709fc5edaa9e374c9f68220 SHA1 58657ff563825a8f0238e260266b42216b6938fd SHA256 10b4d65413514e7cbe8f35a14b671d6cd70ed7376e67b6f385723b1595ecbc5a
+MISC ChangeLog 491 RMD160 3330f7f23bb4d2f3fd185baa2329cfb9fc585f8b SHA1 6987cc564cf0b4c71050955c621ff6c476ef2a79 SHA256 ff1c49946c8209cc046080e3a766c964a42d58768e15fd6e0324832d7eb37129
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAksn+SMACgkQeM7EJeUH71M7TACaAtDcXNTSpZUsyuAFD7Bh4mYX
-zKUAoIhl9wjJJvq9VKtTE2iBFkrEoNpU
-=ERUV
+iF4EAREIAAYFAkxsH6IACgkQZihJkut28StKaQD8CIwxrQXgyHwfrKIVqSxsW5Vx
+7LQRlHiQrpIBWy/ULhYA/AnmcuseL2smadgDHIygWm/R6UPWMOsXlegj+BqNlII3
+=ydxe
 -----END PGP SIGNATURE-----
