@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/ts-datetime-delta
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*ts-datetime-delta-1.0.2-r1 (18 Aug 2010)
+
+  18 Aug 2010; Hans de Graaff <graaff@gentoo.org>
+  +ts-datetime-delta-1.0.2-r1.ebuild:
+  Convert to ruby-fakegem.
 
 *ts-datetime-delta-1.0.2 (15 Dec 2009)
 
